--- a/notifico/views/account/templates/tokens.html
+++ b/notifico/views/account/templates/tokens.html
@@ -4,7 +4,7 @@
 {% block content_page %}
   <h2>OAuth Tokens</h2>
   <div class="section-content">
-    <p>OAuth tokens are used by {{ site_label }} to authenticate with 3rd party services on
+    <p>OAuth tokens are used by Notifico to authenticate with 3rd party services on
       your behalf. You may delete these at any time to erase them from {{ site_label }}.
       They can simply be re-added later if you require them again.</p>
     {% if g.user.tokens.count() == 0 %}
