--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -4,7 +4,7 @@
 {% block content_page %}
   <h3>Networks</h3>
   <div class="section-content">
-    <table class="table table-striped table-vertical">
+    <table class="table table-striped table-vertical table-bordered">
       <thead>
         <tr>
           <th>Host</th>
@@ -30,6 +30,6 @@
         {% endfor %}
       </tbody>
     </table>
-    {{ render_pagination(pagination, '.networks', **request.args) }}
+    {{ render_pagination(pagination, '.networks') }}
   </div>
 {% endblock %}
