--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -4,7 +4,7 @@
 {% block content_page %}
   <h3>All Projects</h3>
   <div class="section-content">
-    <table class="table table-striped">
+    <table class="table table-striped table-bordered">
       <thead>
         <tr>
           <th>Created</th>
